# aoc24-rs

./: .gitignore  Cargo.toml  README.md  dfahdsf
day_01/src/: main.rs
day_02/: Cargo.toml
day_02/src/: main.rs
day_03/src/: main.rs
day_04/: Cargo.toml
day_04/src/: main.rs
day_05/: Cargo.toml
day_05/src/: main.rs
day_06/: Cargo.toml
day_06/src/: main.rs
day_07/src/: main.rs
day_08/src/: main.rs
day_09/: Cargo.toml
day_09/src/: main.rs
day_10/src/: main.rs
day_11/: Cargo.toml
day_11/src/: main.rs
