[package]
name = "day_05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.8.0"
time = "0.3.30"
diff = { version = "0.1.13", features = [] }

[profile.release]
lto = "fat"        # Link time optimization
codegen-units = 1  # Maximize optimization across the entire crate
panic = "abort"    # Make panic call abort instead of unwind
strip = true       # Reduce the binary size by removing debug symbols
